static/css/inbox.less
/* ... */
.section {
  margin-top: 2em;
}

@media (max-width: 767px) {
  .item-content {
    border-width: 0;
  }
  .inbox .inbox-items {
    border-left: 0;
    li.selected {
      background-color: inherit;
      &.read {
        background-color: @background-color;
      }
    }
  }
  .header {
    font-size: 0.65em;
    .dropdown-menu {
      font-size: 1.5em;
      margin: 0;
      top: 0.6em;
      right: 0.2em;
    }
    .tabs a {
      width: 6em;
    }
    .mm-icon {
      font-size: 2em;
    }
    .logo {
      .logo-icon {
        display: inherit;
      }
      .logo-full {
        display: none;
      }
    }
    .extras a {
      padding-top: 0.3em;
      margin-top: 0.2em;
      font-size: 1.2em;
    }
  }
  .filters {
    padding: 0;
    padding-bottom: 1em;
    font-size: 0.77em;
    .dropdown, .slide-back .mm-button {
      vertical-align: top;
    }
    .dropdown {
      width: 4.3em;

      &.analytics-module {
        width: 5em;
      }
    }
    .mm-button-text {
      width: 0;
      visibility: hidden;
      padding-right: 0.75em;
    }
    .slide-back {
      display: inline-block;
    }
    .basic-filters, .slide-back {
      padding-top: 0.2em;
    }
    .basic-filters {
      left: 2.5em;
    }
    .freetext-filter {
      display: none;
    }
    .advanced-filter {
      width: 3em;
    }
    .mobile-freetext-filter {
      display: inline-block;

      .search-pane {
        padding: 1em;
      }
    }
    .filter-buttons {
      width: inherit;
      padding-right: 0.4em;
      .dropdown-menu {
        top: 3.8em;
        right: 0.2em;
      }
    }
  }
  .inbox-items,
  .content-pane {
    width: 100%;
  }
  .inbox-items,
  .content-pane {
    position: absolute;
    padding-top: 0;
  }
  .message-content-wrapper {
    .item-content, .reply {
      left: 0;
    }
  }
  .content {
    .page {
      top: 5.75em;
    }
    .meta {
      padding-bottom: 0;
    }
    .item-content .body {
      padding-bottom: 0;
    }
  }
  .reports .content .item-content .body > ul > li {
    padding: 1em;
  }
  .messages .content .item-content .body {
    margin-bottom: 0;
  }
  .item-content .reply .note {
    display: inline;
  }
  .message-content-wrapper .reply textarea {
    width: 100%;
    height: 3em;
  }

  .action-container .column {
    padding: 0;
    .actions {
      box-shadow: none;
      border-width: 1px 0 0 0;
      margin: 0;
      padding: 0;
      border-radius: 0;
      max-width: 100%;
    }
  }

  .action-container .column,
  .content .inbox-items,
  .content-pane {
    transition: left 500ms ease 0s;
  }

  .content .inbox-items {
    left: 0;
  }
  .action-container .column,
  .content-pane {
    left: 100%;
  }

  body.show-content {
    .content .inbox-items {
      left: -100%;
    }
    .action-container .column,
    .content-pane {
      left: 0;
    }
  }

  .filter-daterangepicker {
    width: 245px;
    height: 240px;
    .calendar {
      transition: left 500ms ease 0s;
      position: absolute;
      float: none;
    }
    .range_inputs {
      display: none;
    }
  }
  .show-from {
    .left {
      left: 0;
    }
    .right {
      left: 100%;
    }
  }
  .show-to {
    .left {
      left: -100%;
    }
    .right {
      left: 0;
    }
  }
  .mm-button {
    padding-left: 0.8em;
  }
  .mm-button-dropdown {
    padding-right: 0.6em;
  }
  .mm-button-icon {
    padding-right: 0.1em;
  }
}

@media (max-width: 400px) {
  .logo {
    display: none;
  }
  .filters .filter {
    margin: 0;
  }
  .header .tabs {
    a {
      padding-top: 0.8em;
      width: 5em;
    }
    .button-label {
      display: none;
    }
  }
  .item-content .body > ul > li li {
    margin-left: 0;
  }
  .message-content-wrapper {
    .item-content {
      top: 3em;
    }
    .name-header {
      height: 3em;
      line-height: 1.2em;
      padding-top: 0.5em;
      .sender .position {
        position: inherit;
      }
    }
  }
  .action-container .column .actions {
    min-height: 4em;
    p {
      display: none;
    }
    .fa-stack {
      font-size: 0.8em;
      height: 4.4em;
    }
    .mm-icon {
      min-height: 4em;
      .fa {
        font-size: 2.5em;
      }
    }
  }
  .header .tabs .configuration-tab {
    display: none;
  }
}

